[gd_scene load_steps=48 format=4 uid="uid://dcisncsshf132"]

[ext_resource type="Script" uid="uid://bicewbaujgbrt" path="res://Scripts/level_3.gd" id="1_f80nq"]
[ext_resource type="LightmapGIData" uid="uid://ctsgk76nsmlnm" path="res://GI_Baked/3d_Main.lmbake" id="3_ltrm1"]
[ext_resource type="CompressedTexture3D" uid="uid://847s7j8rjoye" path="res://Assets/Textures/Lut.png" id="4_16bue"]
[ext_resource type="Texture2D" uid="uid://cmoncv7ugodom" path="res://Assets/Textures/overcast_soil_puresky_1k.hdr" id="5_rfddm"]
[ext_resource type="Material" uid="uid://47vpbpfadhav" path="res://Assets/Materials&Shaders/rain.tres" id="6_c8hbi"]
[ext_resource type="Texture2D" uid="uid://117buwehvn0l" path="res://Assets/Textures/Crosshair.png" id="7_7mxbq"]
[ext_resource type="Script" uid="uid://by2k5050k8i7f" path="res://addons/virtual_joystick/virtual_joystick_instantiator.gd" id="8_yk4w0"]
[ext_resource type="Texture2D" uid="uid://br2pw0pht2kfj" path="res://Assets/Sprites/UI/buttons.PNG" id="9_ummpp"]
[ext_resource type="FontFile" uid="uid://pw7ufq020i4s" path="res://Assets/Fonts/EBGaramond-VariableFont_wght.ttf" id="10_2fc35"]
[ext_resource type="Script" path="res://Scripts/Profiler.gd" id="11_sospo"]
[ext_resource type="PackedScene" uid="uid://bxhjvsquusjiv" path="res://Scenes/player.tscn" id="12_fl7h5"]
[ext_resource type="Script" uid="uid://c1syc6apyhrh2" path="res://Scripts/Menu/out_dialog_zone_2.gd" id="17_f80nq"]
[ext_resource type="Script" uid="uid://cix4xnpxfcjhx" path="res://Scripts/dialog_zone.gd" id="18_f80nq"]
[ext_resource type="PackedScene" uid="uid://0fbrhih0jfxs" path="res://Scenes/Levels/comix.tscn" id="18_lnl7s"]
[ext_resource type="Texture2D" uid="uid://6jruflh85uyn" path="res://Assets/Textures/bobx.png" id="19_mhkwd"]
[ext_resource type="PackedScene" uid="uid://c4awuf3f43axh" path="res://Scenes/world.tscn" id="20_js7s8"]
[ext_resource type="PackedScene" uid="uid://byxpfxxv6r2bx" path="res://Scenes/Menu/console.tscn" id="21_p4j2g"]
[ext_resource type="PackedScene" uid="uid://bpmnndfo5vild" path="res://Scenes/Menu/dialog_zone.tscn" id="23_3fjac"]
[ext_resource type="AudioStream" uid="uid://doukbo8orlx2q" path="res://Assets/Audio/Music/noiseFromRadio.mp3" id="24_vhuf1"]
[ext_resource type="PackedScene" uid="uid://b81h7dtbc1ow4" path="res://Scenes/physics_button.tscn" id="25_1n4q2"]
[ext_resource type="PackedScene" uid="uid://u6s133tq6di4" path="res://Scenes/door.tscn" id="26_bptt3"]
[ext_resource type="PackedScene" path="res://Scenes/AAAATACK.tscn" id="27_lnl7s"]
[ext_resource type="PackedScene" uid="uid://b27mkdxaqkako" path="res://Scenes/push_box.tscn" id="27_vbiey"]
[ext_resource type="Material" uid="uid://cvawvs5dfw6n3" path="res://Assets/Materials&Shaders/MainAtlas.tres" id="28_76ckf"]
[ext_resource type="Texture2D" uid="uid://bmey8cimaeee2" path="res://Assets/Textures/Atlas.png" id="29_g0r1h"]
[ext_resource type="Script" path="res://Scripts/push_box.gd" id="30_kn52q"]
[ext_resource type="PackedScene" uid="uid://hks7pxviimea" path="res://Scenes/chairXD.tscn" id="31_if3t1"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_6748a"]
panorama = ExtResource("5_rfddm")
energy_multiplier = 0.26

[sub_resource type="Sky" id="Sky_hwb23"]
sky_material = SubResource("PanoramaSkyMaterial_6748a")

[sub_resource type="Environment" id="Environment_5y6uu"]
background_mode = 2
sky = SubResource("Sky_hwb23")
reflected_light_source = 2
fog_enabled = true
fog_light_energy = 0.0
fog_sun_scatter = 0.08
fog_density = 0.1766
fog_aerial_perspective = 0.8
fog_height = 0.2
fog_height_density = 0.4419
adjustment_enabled = true
adjustment_brightness = 0.91
adjustment_contrast = 0.56
adjustment_saturation = 0.82
adjustment_color_correction = ExtResource("4_16bue")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m4h5f"]
emission_shape_scale = Vector3(10, 5, 10)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, -1, 0)
spread = 5.0
initial_velocity_min = 20.61
initial_velocity_max = 20.61
gravity = Vector3(0, 0, 0)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Curve" id="Curve_c4mmn"]
_limits = [0.0, 0.07, 0.0, 1.0]
_data = [Vector2(0, 0.016), 0.0, 0.0, 0, 0, Vector2(0.153, 0.034), 0.097, 0.097, 0, 0, Vector2(0.959, 0.007), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_d2e0u"]
material = ExtResource("6_c8hbi")
curve = SubResource("Curve_c4mmn")

[sub_resource type="AtlasTexture" id="AtlasTexture_ryjqc"]
atlas = ExtResource("9_ummpp")
region = Rect2(91, 78, 383, 386)

[sub_resource type="LabelSettings" id="LabelSettings_r0lyn"]
font = ExtResource("10_2fc35")
font_size = 35

[sub_resource type="AtlasTexture" id="AtlasTexture_nqasx"]
atlas = ExtResource("9_ummpp")
region = Rect2(550, 542, 407, 406)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe7un"]
atlas = ExtResource("9_ummpp")
region = Rect2(584, 95, 332, 342)

[sub_resource type="BoxShape3D" id="BoxShape3D_f80nq"]
size = Vector3(1, 6.46973, 10.4425)

[sub_resource type="SphereShape3D" id="SphereShape3D_j3yal"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r0lyn"]
shading_mode = 2
albedo_texture = ExtResource("19_mhkwd")
uv1_scale = Vector3(2, 2, 2)
uv1_triplanar = true

[sub_resource type="SphereMesh" id="SphereMesh_c5s4o"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iqpl7"]
radius = 1.70156

[sub_resource type="SphereShape3D" id="SphereShape3D_lnl7s"]
radius = 6.14136

[sub_resource type="BoxShape3D" id="BoxShape3D_5ld0s"]
size = Vector3(0.7, 0.7, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3gtsu"]
resource_name = "Material.001"
albedo_texture = ExtResource("29_g0r1h")
metallic = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_ilop2"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAgABAAQAAAADAAUAAAAFAAEAAgAGAAMABgAFAAMABAAGAAIAAQAFAAcAAQAHAAQABwAFAAYABAAHAAYA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAD//wAAAAD/////AAAAAAAA/////wAAAAAAAP//AAD///////8AAAAAAAAAAAAA//8AAP//AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_lqrgo"]
lightmap_size_hint = Vector2i(58, 38)
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("+P93PwD5/z01wjI/r6F8P+j/Zz8A+f89NcIyP/MaCj/4/3c/APF/PQnLfT+voXw/6P9nPwDxfz0Jy30/8xoKP+j/Zz8A8X89yz0NPK+hfD/Y/1c/APF/Pcs9DTzzGgo/6P9nPwAAAACWe5o+r6F8P9j/Vz8AAAAAlnuaPvMaCj/o/2c/AP1/PmqEJT+voXw/2P9XPwD9fz4s97Q+r6F8P+j/Zz/A/D8+aoQlP/MaCj/Y/1c/wPw/Piz3tD7zGgo/2P9XPwD5/z0s97Q+G8rrPsj/Rz8A+f89LPe0PjaUVzzY/1c/APF/PWqEJT8byus+yP9HPwDxfz1qhCU/NpRXPOj/Zz8A+f89yz0NPBvK6z7Y/1c/APn/Pcs9DTw2lFc86P9nPwDxfz2We5o+G8rrPtj/Vz8A8X89lnuaPjaUVzzo/2c/wPw/PgnLfT8byus+2P9XP8D8Pz41wjI/G8rrPuj/Zz8A+f89Cct9PzaUVzzY/1c/APn/PTXCMj82lFc8"),
"format": 34359742519,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAgABAAMABAAFAAYABgAFAAcACAAJAAoACgAJAAsADAANAA4ADgANAA8AEAARABIAEgARABMAFAAVABYAFgAVABcA"),
"material": SubResource("StandardMaterial3D_3gtsu"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAvwAAgD8AAIC/AACAPwAAgD8AAIC/AACAvwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgL8AAIA/AACAvwAAgD8AAIA/AACAvwAAgL8AAIA/AACAvwAAgD8AAIA/AACAvwAAgL8AAIA/AACAvwAAgD8AAIC/AACAvwAAgL8AAIC/AACAPwAAgL8AAIC/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/AACAvwAAgL8AAIA/AACAPwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/AACAPwAAgL8AAIA/AACAvwAAgD8AAIC/AACAvwAAgL8AAIC/AACAPwAAgD8AAIC/AACAPwAAgL8AAIC//n/+/wAAAMD+f/7/AAAAwP5//v8AAADA/n/+/wAAAMD/f/9/AID+//9//38AgP7//3//fwCA/v//f/9/AID+/wEABIABgPz/AQAEgAGA/P8BAASAAYD8/wEABIABgPz/AIAAAP7//78AgAAA/v//vwCAAAD+//+/AIAAAP7//7/6/wCA/n/+//r/AID+f/7/+v8AgP5//v/6/wCA/n/+//7//v//f/7//v/+//9//v/+//7//3/+//7//v//f/7/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ilop2")

[node name="Level" type="Node3D"]
script = ExtResource("1_f80nq")

[node name="LightmapGI" type="LightmapGI" parent="."]
light_data = ExtResource("3_ltrm1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5y6uu")

[node name="GPUParticles3D" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.590574, 0, 4.94383)
amount = 1500
trail_enabled = true
trail_lifetime = 0.04
process_material = SubResource("ParticleProcessMaterial_m4h5f")
draw_pass_1 = SubResource("RibbonTrailMesh_d2e0u")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.963526, 0.263502, -0.0467342, -0.0584827, -0.0369154, 0.997606, 0.261146, 0.963952, 0.0509794, 1.26172, 4.49234, 2.35118)
light_energy = 0.739
light_angular_distance = 55.27
light_bake_mode = 1

[node name="GPUParticles3D2" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.590574, 0, 16.1215)
amount = 1500
visibility_aabb = AABB(-7.55, -4, -4, 13.695, 8, 8)
trail_enabled = true
trail_lifetime = 0.04
process_material = SubResource("ParticleProcessMaterial_m4h5f")
draw_pass_1 = SubResource("RibbonTrailMesh_d2e0u")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740314, 0, 32.3733)
amount = 1500
visibility_aabb = AABB(-7.55, -4, -4, 14.835, 8, 8)
trail_enabled = true
trail_lifetime = 0.04
process_material = SubResource("ParticleProcessMaterial_m4h5f")
draw_pass_1 = SubResource("RibbonTrailMesh_d2e0u")

[node name="GPUParticles3D4" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5512, 0, 46.2856)
amount = 1500
visibility_aabb = AABB(-7.55, -4, -4, 14.835, 8, 8)
trail_enabled = true
trail_lifetime = 0.04
process_material = SubResource("ParticleProcessMaterial_m4h5f")
draw_pass_1 = SubResource("RibbonTrailMesh_d2e0u")

[node name="GPUParticles3D5" type="GPUParticles3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.96142, 0, 58.6642)
amount = 1500
trail_enabled = true
trail_lifetime = 0.04
process_material = SubResource("ParticleProcessMaterial_m4h5f")
draw_pass_1 = SubResource("RibbonTrailMesh_d2e0u")

[node name="InputLayout" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="InputLayout"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="InputLayout/BoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="InputLayout/BoxContainer/CenterContainer"]
texture = ExtResource("7_7mxbq")

[node name="Virtual Joystick" type="Control" parent="InputLayout"]
modulate = Color(1, 1, 1, 0.258824)
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 272.0
offset_right = 76.0
offset_bottom = 312.0
scale = Vector2(0.375, 0.375)
script = ExtResource("8_yk4w0")
metadata/_custom_type_script = "uid://by2k5050k8i7f"

[node name="PauseButton" type="TouchScreenButton" parent="InputLayout"]
modulate = Color(1, 1, 1, 0.258824)
position = Vector2(17, 11)
scale = Vector2(0.130548, 0.129534)
texture_normal = SubResource("AtlasTexture_ryjqc")

[node name="Label" type="Label" parent="InputLayout"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -151.0
offset_bottom = 83.0
grow_horizontal = 0
text = "FPS:"
label_settings = SubResource("LabelSettings_r0lyn")
script = ExtResource("11_sospo")

[node name="HBoxContainer" type="HBoxContainer" parent="InputLayout"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="GrabButton" type="TouchScreenButton" parent="InputLayout/HBoxContainer"]
modulate = Color(1, 1, 1, 0.258824)
position = Vector2(-192, -88)
scale = Vector2(0.140049, 0.142857)
texture_normal = SubResource("AtlasTexture_nqasx")
action = "pick"

[node name="JumpButton" type="TouchScreenButton" parent="InputLayout/HBoxContainer"]
modulate = Color(1, 1, 1, 0.258824)
position = Vector2(-96, -160)
scale = Vector2(0.168675, 0.163743)
texture_normal = SubResource("AtlasTexture_xe7un")
action = "jump"

[node name="Player" parent="." instance=ExtResource("12_fl7h5")]
transform = Transform3D(0.993278, 0, 0.115752, 0, 1, 0, -0.115752, 0, 0.993278, 11.1167, 0.939393, 29.9014)
collision_mask = 55

[node name="World" parent="." instance=ExtResource("20_js7s8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.068, 0, 0)

[node name="StaticBody3D2" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.76492, 1.71083, 17.4972)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.668783, 1.42065, -1.0639)
shape = SubResource("BoxShape3D_f80nq")

[node name="SharXD" type="RigidBody3D" parent="." groups=["rigids"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.46348, 1.25999, 14.2189)
collision_layer = 2
collision_mask = 62
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SharXD"]
shape = SubResource("SphereShape3D_j3yal")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SharXD"]
material_override = SubResource("StandardMaterial3D_r0lyn")
mesh = SubResource("SphereMesh_c5s4o")

[node name="Console" parent="." instance=ExtResource("21_p4j2g")]

[node name="Dialogs" type="Node3D" parent="."]

[node name="OUTDialogZone1" parent="Dialogs" instance=ExtResource("23_3fjac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.22651, 0.734172, 9.89033)
file = "res://Resources/Dialogs/OUT/1.txt"
is_out = true

[node name="OUTDialogZone2" type="Area3D" parent="Dialogs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.70798, 0.734172, 10.5911)
script = ExtResource("17_f80nq")
file = "res://Resources/Dialogs/OUT/2.txt"
is_out = true
comix = ExtResource("18_lnl7s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dialogs/OUTDialogZone2"]
shape = SubResource("SphereShape3D_iqpl7")

[node name="OUTDialogZone4" parent="Dialogs" instance=ExtResource("23_3fjac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8242, 0, 13.1384)
file = "res://Resources/Dialogs/OUT/3.txt"
is_out = true

[node name="OUTDialogZone5" parent="Dialogs" instance=ExtResource("23_3fjac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.97358, 0, 24.2838)
file = "res://Resources/Dialogs/OUT/4.txt"
is_out = true

[node name="OUTDialogZone6" parent="Dialogs" instance=ExtResource("23_3fjac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.99733, 0, 28.5691)
file = "res://Resources/Dialogs/OUT/5.txt"
is_out = true

[node name="OUTDialogZone7" parent="Dialogs" instance=ExtResource("23_3fjac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.4687, 0, 53.5722)
file = "res://Resources/Dialogs/OUT/6.txt"
is_out = true

[node name="OUTDialogZone8" type="Area3D" parent="Dialogs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.88906, 0, 76.6281)
script = ExtResource("18_f80nq")
file = "res://Resources/Dialogs/OUT/7.txt"
is_out = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dialogs/OUTDialogZone8"]
shape = SubResource("SphereShape3D_lnl7s")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.74929, 0, 32.0941)
stream = ExtResource("24_vhuf1")
autoplay = true
bus = &"Музыка"

[node name="PhysicsButton" parent="." node_paths=PackedStringArray("door") instance=ExtResource("25_1n4q2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5388, 2.34335, 17.5941)
door = NodePath("../Doors/Door8")

[node name="PhysicsButton2" parent="." node_paths=PackedStringArray("door") instance=ExtResource("25_1n4q2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.28273, 0.143721, 32.4691)
door = NodePath("../Doors/Door5")

[node name="Doors" type="Node3D" parent="."]

[node name="Door1" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.45058e-09, 0, 8.38808)

[node name="Door2" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.000352506, 0, 11.2914)
is_open = true

[node name="Door3" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0843525, 0, 21.0928)

[node name="Door4" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.257802, 0, 27.0656)
is_open = true

[node name="Door5" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.0231, 0, 37.2898)

[node name="Door6" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.86322, 0, 40.9358)
is_open = true

[node name="Door7" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.04827, 0, 55.6638)

[node name="Door8" parent="Doors" instance=ExtResource("26_bptt3")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7.45058e-09, 0, -3.83725)

[node name="SharXD2" type="RigidBody3D" parent="." groups=["rigids"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.34887, 2.25755, 32.4617)
collision_layer = 2
collision_mask = 62
mass = 20.0
max_contacts_reported = 10
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SharXD2"]
shape = SubResource("SphereShape3D_j3yal")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SharXD2"]
material_override = SubResource("StandardMaterial3D_r0lyn")
mesh = SubResource("SphereMesh_c5s4o")

[node name="PushBox" parent="." instance=ExtResource("27_vbiey")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.517004, 0.365327, 32.4165)
collision_layer = 65
collision_mask = 13
lock_rotation = true

[node name="PushBox2" parent="." instance=ExtResource("27_vbiey")]
transform = Transform3D(1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, -10.4312, 2.41269, 42.9726)
collision_layer = 65
collision_mask = 13
lock_rotation = true

[node name="StulXD7" parent="." instance=ExtResource("31_if3t1")]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 3.92204, 0, 29.1872)

[node name="StulXD8" parent="." instance=ExtResource("31_if3t1")]
transform = Transform3D(0.919499, 0, -0.393092, 0, 1, 0, 0.393092, 0, 0.919499, -6.5075, 2.25958, 16.8784)

[node name="SharXD3" type="RigidBody3D" parent="." groups=["rigids"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.8403, 2.94324, 47.7055)
collision_layer = 2
collision_mask = 62
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SharXD3"]
shape = SubResource("SphereShape3D_j3yal")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SharXD3"]
material_override = SubResource("StandardMaterial3D_r0lyn")
mesh = SubResource("SphereMesh_c5s4o")

[node name="PhysicsButton3" parent="." node_paths=PackedStringArray("door") instance=ExtResource("25_1n4q2")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -19.5612, 2.60145, 46.3061)
door = NodePath("../Doors/Door7")
switch = true

[node name="PushBox4" parent="." instance=ExtResource("27_vbiey")]
transform = Transform3D(-1.03316e-07, 0, 1, 0, 1, 0, -1, 0, -1.03316e-07, -5.3901, 1.33358, 56.2606)
disable_mode = 1
collision_layer = 65
collision_mask = 13

[node name="SharXD4" type="RigidBody3D" parent="." groups=["rigids"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.37669, 0.842093, 59.5199)
collision_layer = 2
collision_mask = 62
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SharXD4"]
shape = SubResource("SphereShape3D_j3yal")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SharXD4"]
material_override = SubResource("StandardMaterial3D_r0lyn")
mesh = SubResource("SphereMesh_c5s4o")

[node name="TRIGGEREDPUSHBOX2" type="StaticBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.217547, 0, 0.97605, 0, 1, 0, -0.97605, 0, 0.217547, 4.9897, 0.879392, 9.06344)
disable_mode = 1
collision_layer = 65
collision_mask = 13

[node name="CollisionShape3D" type="CollisionShape3D" parent="TRIGGEREDPUSHBOX2"]
shape = SubResource("BoxShape3D_5ld0s")

[node name="Area3D" type="Area3D" parent="TRIGGEREDPUSHBOX2"]
collision_mask = 34
script = ExtResource("30_kn52q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TRIGGEREDPUSHBOX2/Area3D"]
shape = SubResource("BoxShape3D_5ld0s")

[node name="Bx" type="MeshInstance3D" parent="TRIGGEREDPUSHBOX2"]
transform = Transform3D(0.35, 0, 0, 0, -0.35, -5.28485e-08, 0, 5.28485e-08, -0.35, 0, 0, 0)
material_override = ExtResource("28_76ckf")
mesh = SubResource("ArrayMesh_lqrgo")

[node name="SharXD6" type="RigidBody3D" parent="." groups=["rigids"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.11082, 0.477527, 10.0727)
collision_layer = 2
collision_mask = 62
contact_monitor = true
max_contacts_reported = 5
linear_damp_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="SharXD6"]
shape = SubResource("SphereShape3D_j3yal")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SharXD6"]
material_override = SubResource("StandardMaterial3D_r0lyn")
mesh = SubResource("SphereMesh_c5s4o")

[node name="StulXD9" parent="." instance=ExtResource("27_lnl7s")]
transform = Transform3D(0.919499, 0, -0.393092, 0, 1, 0, 0.393092, 0, 0.919499, -16.1958, 0.546815, 33.6854)

[connection signal="released" from="InputLayout/PauseButton" to="." method="_on_pause_button_released"]
[connection signal="body_entered" from="Dialogs/OUTDialogZone2" to="Dialogs/OUTDialogZone2" method="_on_body_entered"]
[connection signal="body_entered" from="Dialogs/OUTDialogZone8" to="Dialogs/OUTDialogZone8" method="_on_body_entered"]
[connection signal="body_entered" from="TRIGGEREDPUSHBOX2/Area3D" to="TRIGGEREDPUSHBOX2/Area3D" method="_on_body_entered"]
